# notifications_design

./: LICENSE  Makefile  README.en.md  README.md  require.txt
.github/workflows/: ci.yml
notifications-polyglot/: .gitignore  README.en.md  README.md
notifications-polyglot/golang/: .env.example  Dockerfile  Makefile  README.en.md  README.md  go.mod  go.sum  integration_test.go  main.go
notifications-polyglot/golang/adapter/: adapter.go  adapter_test.go
notifications-polyglot/golang/api/: handler.go  response.go  routes.go
notifications-polyglot/golang/logger/: logger.go
notifications-polyglot/golang/service/: models.go  notification.go  notification_status_service.go  notification_test.go
notifications-polyglot/infra/: README.md  docker-compose.yml
notifications-polyglot/java/: .env.example  Dockerfile  Makefile  README.en.md  README.md  build.gradle.kts  settings.gradle.kts  test_output.txt  test_output_debug.txt  test_output_debug_2.txt  test_output_fixed.txt
notifications-polyglot/kotlin/: .env.example  Dockerfile  Makefile  README.en.md  README.md  build.gradle.kts  settings.gradle.kts  test_output_kotlin.txt
notifications-polyglot/rust/: .env.example  Cargo.toml  Dockerfile  Makefile  README.en.md  README.md
notifications-polyglot/rust/src/: adapter.rs  api.rs  lib.rs  main.rs  models.rs  response.rs  service.rs  status_service.rs  worker.rs
notifications-polyglot/rust/tests/: adapter_test.rs  integration_test.rs
notifications-polyglot/typescript/: .env.example  Dockerfile  Makefile  README.en.md  README.md  package-lock.json  package.json
(+75 files in other folders)
